--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="logo">Target99</div>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#properties">Properties</a></li>
+      <li><a href="#testimonials">Testimonials</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
   <!-- Hero Section -->
   <header class="hero">
-    <h1>Target99 Real Estate</h1>
-    <p>Trusted Advisors · Custom Experiences · Premium Locations</p>
+    <div class="hero-content">
+      <h1>Target99 Real Estate</h1>
+      <p>Trusted Advisors · Custom Experiences · Premium Locations</p>
+      <a href="#properties" class="btn">Find Properties</a>
+    </div>
   </header>
 
   <!-- About Section -->
-  <section class="about">
+  <section id="about" class="about">
     <h2>About Us</h2>
-    <p>At Target99, we help you find your dream home and premium investment opportunities with trusted advice and personalized service.</p>
+    <p>At Target99, we redefine real estate by blending premium locations, personalized services, and trusted expertise. Whether you're buying, investing, or selling, our advisors ensure a seamless experience.</p>
   </section>
 
   <!-- Video + Map Section -->
   <section class="media-section">
     <div class="media-box">
-      <h2>Watch Our Story</h2>
+      <h2>Our Story</h2>
       <iframe width="100%" height="315"
         src="https://www.youtube.com/embed/aUtAFZ5VlsU"
         frameborder="0" allowfullscreen></iframe>
@@ -36,16 +50,14 @@
   </section>
 
   <!-- Properties Section -->
-  <section class="properties">
+  <section id="properties" class="properties">
     <h2>Find Properties</h2>
-    <div class="controls">
-      <input id="search" type="text" placeholder="Search properties...">
-    </div>
+    <input id="search" type="text" placeholder="Search properties..." class="search-box">
     <div id="property-list" class="property-grid"></div>
   </section>
 
   <!-- Testimonials -->
-  <section class="testimonials">
+  <section id="testimonials" class="testimonials">
     <h2>What Our Customers Say</h2>
     <div class="testimonial-grid">
       <blockquote>“Target99 helped me find the perfect home in Gurgaon. The team is amazing!” – Ankit</blockquote>
@@ -57,9 +69,11 @@
   <!-- Contact Section -->
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:dk.realestate138@gmail.com">dk.realestate138@gmail.com</a></p>
-    <p>Phone: <a href="tel:+919577799911">+91 95777 99911</a>, <a href="tel:+919910733099">+91 99107 33099</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/thetarget99group/" target="_blank">@thetarget99group</a></p>
+    <div class="contact-info">
+      <p>📧 <a href="mailto:dk.realestate138@gmail.com">dk.realestate138@gmail.com</a></p>
+      <p>📞 <a href="tel:+919577799911">+91 95777 99911</a>, <a href="tel:+919910733099">+91 99107 33099</a></p>
+      <p>📸 <a href="https://www.instagram.com/thetarget99group/" target="_blank">@thetarget99group</a></p>
+    </div>
   </section>
 
   <footer>
