--- a/index.html
+++ b/index.html
@@ -59,14 +59,25 @@
     <section class="media-section section">
       <div class="media-left">
         <h3>Our Story</h3>
-        <div class="video-wrap">
-          <iframe src="https://www.youtube.com/embed/aUtAFZ5VlsU" title="Target99 Video" frameborder="0" allowfullscreen></iframe>
+        <div class="video-wrap" aria-hidden="false">
+          <iframe
+            src="https://www.youtube.com/embed/aUtAFZ5VlsU?rel=0&modestbranding=1&autoplay=0&controls=1"
+            title="Target99 Video"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
         </div>
       </div>
       <div class="media-right">
         <h3>Visit Us</h3>
-        <div class="map-wrap">
-          <iframe src="https://maps.google.com/maps?q=28.427681,77.080712&z=15&output=embed" frameborder="0" allowfullscreen></iframe>
+        <div class="map-wrap" aria-hidden="false">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d350.0!2d77.080712!3d28.427681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v0000000000000"
+            title="Target99 Location"
+            frameborder="0"
+            allowfullscreen>
+          </iframe>
         </div>
       </div>
     </section>
