--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <header id="home" class="hero">
+  <header id="home" class="hero" style="background-image:url('images/bg1.png')">
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <div class="hero-left">
@@ -49,6 +49,7 @@
       </div>
     </div>
   </header>
+
 
   <main>
     <section id="about" class="section narrow">
