--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <section class="media-section section">
       <div class="media-left">
         <h3>Our Story</h3>
-        <div class="video-wrap" aria-hidden="false">
+        <div class="video-wrap">
           <iframe
-            src="https://www.youtube.com/embed/aUtAFZ5VlsU?rel=0&modestbranding=1&autoplay=0&controls=1"
+            src="https://www.youtube.com/embed/aUtAFZ5VlsU?rel=0&modestbranding=1"
             title="Target99 Video"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -72,7 +72,7 @@
       </div>
       <div class="media-right">
         <h3>Visit Us</h3>
-        <div class="map-wrap" aria-hidden="false">
+        <div class="map-wrap">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d350.0!2d77.080712!3d28.427681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v0000000000000"
             title="Target99 Location"
